add LoginResponse class and findEmailAndReturnsDTO